--- a/index.html
+++ b/index.html
@@ -10,8 +10,40 @@
 
 <body>
     <nav>
+        <div class="bandeau">
+            <ul>
+                <li>Précommandez vos chaussettes dès maintenant</li>
+                <li>★</li>
+                <li>Journée R&D 17 mars</li>
+                <li>★</li>
+                <li>Photonique et IA</li>
+                <li>★</li>
+                <li>Précommandez vos chaussettes dès maintenant</li>
+                <li>★</li>
+                <li>Journée R&D 17 mars</li>
+                <li>★</li>
+                <li>Photonique et IA</li>
+                <li>★</li>
+            </ul>
+
+            <ul>
+                <li>Précommandez vos chaussettes dès maintenant</li>
+                <li>★</li>
+                <li>Journée R&D 17 mars</li>
+                <li>★</li>
+                <li>Photonique et IA</li>
+                <li>★</li>
+                <li>Précommandez vos chaussettes dès maintenant</li>
+                <li>★</li>
+                <li>Journée R&D 17 mars</li>
+                <li>★</li>
+                <li>Photonique et IA</li>
+                <li>★</li>
+            </ul>
+        </div>
+
         <ul>
-            <li><a href="./index.html"><img src="./images/logoNoir.png" alt="Image du logo de l'acceuil" height="30"> Accueil</a></li>
+            <li><a href="./index.html">Accueil</a></li>
             <li><a href="./html/lieu.html">Lieu</a></li>
             <li><a href="./html/intervenant.html">Intervenants</a></li>
             <li><a href="./html/activite.html">Activités</a></li>
@@ -19,9 +51,10 @@
         </ul>
     </nav>
 
-    <header class="image-container">
-        <img class="imageTitre" src="./images/titreLogo.png" alt="Image du titre du logo">
-        <img class="imageFond" src="./images/titre.webp" alt="Image du titre">
+    <header>
+        <img class="cover" src="./images/fondTitre.webp" alt="Image de fond du titre">
+        <img class="imgTitre" src="./images/titre.png" alt="Image du titre">
+        <h1>Apprenez en plus sur l'IA et la Photonique pendant la journée R&D <a href="./html/activite.html ">Découvrir les événements</a></h2>
     </header>
 
 
@@ -36,6 +69,23 @@
         </section>
 
         <section>
+            <div class="bandeauEvent">
+                <ul>
+                    <li>
+                        <h4>Conférence IA</h4>
+                        <img src="./images/personne.png" alt="Image d'une personne" height="150px">
+                    </li>
+                    <li>
+                        <h4>Conférence Photonique</h4>
+                        <img src="./images/personne.png" alt="Image d'une personne" height="150px">
+                    </li>
+                </ul>
+            </div>
+            
+
+        </section>
+
+        <section>
             <h2>Photonique</h2>
             <p>La photonique est la branche de la physique concernant l'étude et la fabrication de composants permettant la génération, la transmission, le traitement ou la conversion de signaux optiques. Elle étudie les photons indifféremment comme onde ou comme corpuscule, dans une approche classique ou quantique.
             </p>
@@ -45,15 +95,6 @@
             <h2>IA</h2>
             <p>L'intelligence artificielle (IA) est l'ensemble des systèmes informatiques capables d'effectuer des tâches typiquement associées à l'intelligence, telles que l'apprentissage, le raisonnement, la résolution de problèmes, la perception ou la prise de décision. L'intelligence artificielle est également le champ de recherche visant à développer de tels systèmes.
             </p>
-        </section>
-
-        <section>
-            <div class="scrollmenu">
-                <div class="product-card"></div>
-                <div class="product-card"></div>
-
-            </div>
-
         </section>
 
     </main>
@@ -94,7 +135,7 @@
                     <li><a href="./assets/pages/cookies.php">Cookies</a></li>
                 </ul>
                 <a class="lens-container"
-                    href="https://www.instagram.com/rnday_info?igsh=am0yam5yYXo1eDNq&utm_source=qr" target="_blank">
+                    href="https://www.instagram.com/rnday_info_pics/" target="_blank">
                     <div class="button-lens">
                         <div class="icon-lens">
                             <i class='bx bxl-instagram'></i>
